fixed gap between tags on recipe page

--- a/src/main/resources/templates/user/user.html
+++ b/src/main/resources/templates/user/user.html
@@ -36,7 +36,7 @@
                 <div class="content-wrapper">
                     <img alt="First-Dish" class="First-Dish" th:src="@{images/First dish.svg}" src="../../static/images/First dish.svg">
                     <div class="text-wrapper">
-                        <a style="font-weight: bold;">Scrambled Eggs</a>
+                        <!--<a th:text="${user}" style="font-weight: bold;">Scrambled Eggs</a>-->
                         <!--<h1 th:text="${user.getRecipes().getCategory().getTitle()}"></h1>-->
                     </div>
                 </div>
