added rating filter

--- a/src/main/resources/templates/user/allRecipes.html
+++ b/src/main/resources/templates/user/allRecipes.html
@@ -170,6 +170,15 @@
                 <i class="fas fa-angle-down dropdown"></i>
             </a>
             <div class="sub-menu">
+                <div class="ratingContainer">
+                    <div class="minRate">
+                        <input name="minRate" placeholder="min" required type="text">
+                    </div>
+                    <div class="line"></div>
+                    <div class="maxRate">
+                        <input name="maxRate" placeholder="max" required type="text">
+                    </div>
+                </div>
             </div>
         </div>
         <hr>
