--- a/src/main/resources/static/css/allRecipes.css
+++ b/src/main/resources/static/css/allRecipes.css
@@ -380,24 +380,24 @@ hr {
     margin-left: 2vw;
 }
 
-.timeContainer {
+.timeContainer, .ratingContainer {
     padding-left: 1vw;
     display: flex;
     flex-direction: row;
     align-items: center;
 }
 
-.minTime, .maxTime {
+.minTime, .maxTime, .minRate, .maxRate {
     display: flex;
     align-items: center;
     padding-left: 0.2vw;
 }
 
-.minTime {
+.minTime, .minRate {
     margin-right: 0.78125vw;
 }
 
-.minTime input, .maxTime input {
+.minTime input, .maxTime input, .minRate input, .maxRate input {
     width: 3vw;
     height: 5vh;
     flex: 1;
@@ -407,7 +407,6 @@ hr {
     font-size: 1.5vw;
     outline: none;
 }
-
 
 .line {
     position: absolute;
