added to filters from A to K letters

--- a/src/main/resources/templates/user/allRecipes.html
+++ b/src/main/resources/templates/user/allRecipes.html
@@ -160,6 +160,80 @@
                 <i class="fas fa-angle-down dropdown"></i>
             </a>
             <div class="sub-menu">
+                <div class="alphabet">
+                    <div class="letters-container">
+                        <input id="a" name="a" type="checkbox" value="a">
+                        <label class="a" for="a">
+                            <img alt="A" src="../../images/alphabet/A.svg">
+                        </label>
+                    </div>
+                    <div class="letters-container">
+                        <input id="b" name="b" type="checkbox" value="b">
+                        <label class="b" for="b">
+                            <img alt="B" src="../../images/alphabet/B.svg">
+                        </label>
+                    </div>
+                    <div class="letters-container">
+                        <input id="c" name="c" type="checkbox" value="c">
+                        <label class="c" for="c">
+                            <img alt="C" src="../../images/alphabet/C.svg">
+                        </label>
+                    </div>
+                    <div class="letters-container">
+                        <input id="d" name="d" type="checkbox" value="d">
+                        <label class="d" for="d">
+                            <img alt="D" src="../../images/alphabet/D.svg">
+                        </label>
+                    </div>
+                    <div class="letters-container">
+                        <input id="e" name="e" type="checkbox" value="e">
+                        <label class="e" for="e">
+                            <img alt="E" src="../../images/alphabet/E.svg">
+                        </label>
+                    </div>
+                    <div class="letters-container">
+                        <input id="f" name="f" type="checkbox" value="f">
+                        <label class="f" for="f">
+                            <img alt="F" src="../../images/alphabet/F.svg">
+                        </label>
+                    </div>
+                    <div class="letters-container">
+                        <input id="g" name="g" type="checkbox" value="g">
+                        <label class="g" for="g">
+                            <img alt="G" src="../../images/alphabet/G.svg">
+                        </label>
+                    </div>
+                    <div class="letters-container">
+                        <input id="h" name="h" type="checkbox" value="h">
+                        <label class="h" for="h">
+                            <img alt="H" src="../../images/alphabet/H.svg">
+                        </label>
+                    </div>
+                    <div class="letters-container">
+                        <input id="i" name="i" type="checkbox" value="i">
+                        <label class="i" for="i">
+                            <img alt="I" src="../../images/alphabet/I.svg">
+                        </label>
+                    </div>
+                    <div class="letters-container">
+                        <input id="J" name="J" type="checkbox" value="J">
+                        <label class="J" for="J">
+                            <img alt="J" src="../../images/alphabet/J.svg">
+                        </label>
+                    </div>
+                    <div class="letters-container">
+                        <input id="K" name="K" type="checkbox" value="K">
+                        <label class="K" for="K">
+                            <img alt="K" src="../../images/alphabet/K.svg">
+                        </label>
+                    </div>
+                    <div class="letters-container">
+                        <input id="L" name="L" type="checkbox" value="L">
+                        <label class="L" for="L">
+                            <img alt="L" src="../../images/alphabet/L.svg">
+                        </label>
+                    </div>
+                </div>
             </div>
         </div>
         <hr>
