--- a/src/main/resources/static/css/allRecipes.css
+++ b/src/main/resources/static/css/allRecipes.css
@@ -80,6 +80,7 @@ a:visited, a:link {
 .ulBoard {
     position: absolute;
     top: 33.5vh;
+    width: 12.5vw;
     height: 37vh;
     font-size: 1.66667vw;
     overflow-y: auto;
@@ -415,4 +416,31 @@ hr {
     border: 0.15vw solid #733506;
 }
 
+.alphabet {
+    display: flex;
+    flex-wrap: wrap;
+}
 
+.letters-container {
+    box-sizing: border-box;
+    margin-right: 0.52vw;
+}
+
+.a, .b, .c, .d, .e, .f, .g, .h,
+.i, .J, .K, .L {
+    width: 0.78vw;
+    height: 1.66vh;
+}
+
+.letters-container input {
+    display: none;
+}
+
+.letters-container input + label {
+    cursor: pointer;
+}
+
+.letters-container input:checked + label {
+    background-color: #F2B705;
+    border-radius: 30%;
+}
