added form for lists on recipe page and improved alphabet filters

--- a/src/main/resources/templates/user/recipe.html
+++ b/src/main/resources/templates/user/recipe.html
@@ -90,6 +90,7 @@
             <p class="num" th:text="${recipe.getAverageMark()}">8.8</p>
         </a>
     </div>
+
     <form method="post" th:action="@{/api/addRecipeToList/{id1}/Favorites(id1=${id})}">
         <button id="FavoriteList">Favorite</button>
     </form>
@@ -99,17 +100,17 @@
         <div id="overlay-lists" onclick="hideOverlay()"></div>
         <div class="lists-container" id="lists-popup-window">
             <button class="create-list" id="create-new-list-btn">Create a new list</button>
-            <!--<form method="post" th:action="@{/api/newList/{id1}(id1=${id})}" th:object="recipe">
+            <form method="post" th:action="@{/api/addRecipeToList/{id1}/{name}(id1=${id}, name=${list.getTitle()})}"
+                  th:each="list, i : ${user.getUserLists()}">
                 <button th:class="${i.index == 0} ? 'user-list user-list' : 'user-list user-list' + (${i.index})"
-                        th:each="list, i : ${user.getUserLists()}"
                         th:style="'top:' + (${i.index * 8 + 10}) + 'vh'"
                         th:text="${list.getTitle()}">
                 </button>
-            </form>-->
+            </form>
             <div class="list-container" id="list-field-popup-window">
                 <form method="post" onsubmit="return validateInput('listName')"
-                      th:action="@{/api/addRecipeToList/{id}/{name}(id=${recipe.id}, name=${newList.getTitle()})}"
-                      th:object="${recipe}">
+                      th:action="@{/api/newList/{id1}(id1=${id})}"
+                      th:object="${newList}">
                     <div class="list-name">
                         <input id="listName" name="title" placeholder="Enter list name" th:value="${newList.title}"
                                type="text">
