--- a/src/main/resources/templates/user/allRecipes.html
+++ b/src/main/resources/templates/user/allRecipes.html
@@ -163,75 +163,59 @@
                 <div class="alphabet">
                     <div class="letters-container">
                         <input id="a" name="a" type="checkbox" value="a">
-                        <label class="a" for="a">
-                            <img alt="A" src="../../images/alphabet/A.svg">
-                        </label>
+                        <label class="a" for="a">A</label>
                     </div>
                     <div class="letters-container">
                         <input id="b" name="b" type="checkbox" value="b">
-                        <label class="b" for="b">
-                            <img alt="B" src="../../images/alphabet/B.svg">
-                        </label>
+                        <label class="b" for="b">B</label>
                     </div>
                     <div class="letters-container">
                         <input id="c" name="c" type="checkbox" value="c">
-                        <label class="c" for="c">
-                            <img alt="C" src="../../images/alphabet/C.svg">
-                        </label>
+                        <label class="c" for="c">C</label>
                     </div>
                     <div class="letters-container">
                         <input id="d" name="d" type="checkbox" value="d">
-                        <label class="d" for="d">
-                            <img alt="D" src="../../images/alphabet/D.svg">
-                        </label>
+                        <label class="d" for="d">D</label>
                     </div>
                     <div class="letters-container">
                         <input id="e" name="e" type="checkbox" value="e">
-                        <label class="e" for="e">
-                            <img alt="E" src="../../images/alphabet/E.svg">
-                        </label>
+                        <label class="e" for="e">E</label>
                     </div>
                     <div class="letters-container">
                         <input id="f" name="f" type="checkbox" value="f">
-                        <label class="f" for="f">
-                            <img alt="F" src="../../images/alphabet/F.svg">
-                        </label>
+                        <label class="f" for="f">F</label>
                     </div>
                     <div class="letters-container">
                         <input id="g" name="g" type="checkbox" value="g">
-                        <label class="g" for="g">
-                            <img alt="G" src="../../images/alphabet/G.svg">
-                        </label>
+                        <label class="g" for="g">G</label>
                     </div>
                     <div class="letters-container">
                         <input id="h" name="h" type="checkbox" value="h">
-                        <label class="h" for="h">
-                            <img alt="H" src="../../images/alphabet/H.svg">
-                        </label>
+                        <label class="h" for="h">H</label>
                     </div>
                     <div class="letters-container">
                         <input id="i" name="i" type="checkbox" value="i">
-                        <label class="i" for="i">
-                            <img alt="I" src="../../images/alphabet/I.svg">
-                        </label>
+                        <label class="i" for="i">I</label>
                     </div>
                     <div class="letters-container">
                         <input id="J" name="J" type="checkbox" value="J">
-                        <label class="J" for="J">
-                            <img alt="J" src="../../images/alphabet/J.svg">
-                        </label>
+                        <label class="J" for="J">J</label>
                     </div>
                     <div class="letters-container">
                         <input id="K" name="K" type="checkbox" value="K">
-                        <label class="K" for="K">
-                            <img alt="K" src="../../images/alphabet/K.svg">
-                        </label>
+                        <label class="K" for="K">K</label>
                     </div>
                     <div class="letters-container">
                         <input id="L" name="L" type="checkbox" value="L">
-                        <label class="L" for="L">
-                            <img alt="L" src="../../images/alphabet/L.svg">
-                        </label>
+                        <label class="L" for="L">L</label>
+                    </div>
+                    <div class="letters-container">
+                        <input id="M" name="M" type="checkbox" value="M">
+                        <label class="M" for="M">M</label>
+                    </div>
+                    <div class="letters-container">
+                        <input id="N" name="N" type="checkbox" value="N">
+                        <label class="N" for="N">N</label>
                     </div>
                 </div>
             </div>
