--- a/src/main/resources/templates/user/user.html
+++ b/src/main/resources/templates/user/user.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta content="width=device-width, initial-scale=1" name="viewport">
     <link href="../../static/css/user.css" rel="stylesheet" th:href="@{css/user.css}" type="text/css">
-    <link href="../../static/css/headerIfooter.css" rel="stylesheet" th:href="@{../css/headerIfooter.css}"
+    <link href="../../static/css/headerIfooter.css" rel="stylesheet" th:href="@{../css/headerIfooter.css}">
 </head>
 <body>
 <header>
@@ -34,10 +34,12 @@
         <div class="favoriteLists-window" id="favorite-popup-window">
             <button class="recipe">
                 <div class="content-wrapper">
-                    <img alt="First-Dish" class="First-Dish" th:src="@{images/First dish.svg}" src="../../static/images/First dish.svg">
+                    <img alt="First-Dish" class="First-Dish" src="../../static/images/First dish.svg"
+                         th:src="@{images/First dish.svg}">
                     <div class="text-wrapper">
                         <!--<a th:text="${user}" style="font-weight: bold;">Scrambled Eggs</a>-->
-                        <!--<h1 th:text="${user.getRecipes().getCategory().getTitle()}"></h1>-->
+                        <!--<h1 th:text="${favoriteList.
+                        user.getRecipes().getCategory().getTitle()}"></h1>-->
                     </div>
                 </div>
             </button>
@@ -80,7 +82,8 @@
     <div id="overlay-list" onclick="hideOverlay()"></div>
 
     <div class="list-container" id="list-field-popup-window">
-        <form method="post" onsubmit="return validateInput('listName')" th:action="@{/api/newList/0}"
+        <form method="post" onsubmit="return validateInput('listName')"
+              th:action="@{/api/newList/0}"
               th:object="${newList}">
             <div class="list-name">
                 <input id="listName" name="title" placeholder="Enter list name" th:value="${newList.title}" type="text">
