added letters to the alphabet filter

--- a/src/main/resources/templates/user/allRecipes.html
+++ b/src/main/resources/templates/user/allRecipes.html
@@ -217,6 +217,54 @@
                         <input id="N" name="N" type="checkbox" value="N">
                         <label class="N" for="N">N</label>
                     </div>
+                    <div class="letters-container">
+                        <input id="O" name="O" type="checkbox" value="O">
+                        <label class="O" for="O">O</label>
+                    </div>
+                    <div class="letters-container">
+                        <input id="P" name="P" type="checkbox" value="P">
+                        <label class="P" for="P">P</label>
+                    </div>
+                    <div class="letters-container">
+                        <input id="Q" name="Q" type="checkbox" value="Q">
+                        <label class="Q" for="Q">Q</label>
+                    </div>
+                    <div class="letters-container">
+                        <input id="R" name="R" type="checkbox" value="R">
+                        <label class="R" for="R">R</label>
+                    </div>
+                    <div class="letters-container">
+                        <input id="S" name="S" type="checkbox" value="S">
+                        <label class="S" for="S">S</label>
+                    </div>
+                    <div class="letters-container">
+                        <input id="T" name="T" type="checkbox" value="T">
+                        <label class="T" for="T">T</label>
+                    </div>
+                    <div class="letters-container">
+                        <input id="U" name="U" type="checkbox" value="U">
+                        <label class="U" for="U">U</label>
+                    </div>
+                    <div class="letters-container">
+                        <input id="V" name="V" type="checkbox" value="V">
+                        <label class="V" for="V">V</label>
+                    </div>
+                    <div class="letters-container">
+                        <input id="W" name="W" type="checkbox" value="W">
+                        <label class="W" for="W">W</label>
+                    </div>
+                    <div class="letters-container">
+                        <input id="X" name="X" type="checkbox" value="X">
+                        <label class="X" for="X">X</label>
+                    </div>
+                    <div class="letters-container">
+                        <input id="Y" name="Y" type="checkbox" value="Y">
+                        <label class="Y" for="Y">Y</label>
+                    </div>
+                    <div class="letters-container">
+                        <input id="Z" name="Z" type="checkbox" value="Z">
+                        <label class="Z" for="Z">Z</label>
+                    </div>
                 </div>
             </div>
         </div>
