--- a/src/main/resources/templates/user/allRecipes.html
+++ b/src/main/resources/templates/user/allRecipes.html
@@ -142,11 +142,11 @@
             <div class="sub-menu">
                 <div class="timeContainer">
                     <div class="minTime">
-                        <input name="minTime" placeholder="min" required type="number">
+                        <input min="0" name="minTime" placeholder="min" required type="number">
                     </div>
                     <div class="line"></div>
                     <div class="maxTime">
-                        <input name="maxTime" placeholder="max" required type="number">
+                        <input min="0" name="maxTime" placeholder="max" required step="any" type="number">
                     </div>
                 </div>
             </div>
